[gd_scene load_steps=5 format=3 uid="uid://bcpbdj7il33d"]

[ext_resource type="Texture2D" uid="uid://cgpjwealkxhvw" path="res://sprites/cell.png" id="1_2mast"]
[ext_resource type="Script" path="res://scripts/cell.gd" id="1_xhyq1"]
[ext_resource type="Texture2D" uid="uid://c3smbi54gvxdp" path="res://sprites/suit_spades.png" id="3_urvc6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqcbw"]
size = Vector2(100, 100)

[node name="Cell" type="Area2D"]
script = ExtResource("1_xhyq1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2mast")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rqcbw")

[node name="Sprite1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_urvc6")

[node name="Sprite2" type="Sprite2D" parent="."]
visible = false
position = Vector2(30, -30)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_urvc6")

[node name="Sprite3" type="Sprite2D" parent="."]
visible = false
position = Vector2(-30, 30)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_urvc6")

[connection signal="input_event" from="." to="." method="_on_input_event"]
